Fix textarea doesn't update when changing to different flashcard. Also z-index to prevent a css bug

--- a/src/pages/Editing/TextArea/TextArea.module.scss
+++ b/src/pages/Editing/TextArea/TextArea.module.scss
@@ -8,6 +8,7 @@
   padding: 10px;
   resize: none;
   width: 100%;
+  z-index: 5;
 
   &.editing {
     background-color: var(--blue-2);
